--- a/WeddingPlanner/Views/Caterer.cshtml
+++ b/WeddingPlanner/Views/Caterer.cshtml
@@ -91,6 +91,70 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.FoodIndian)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FoodIndian)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FoodItalian)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FoodItalian)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FoodChinese)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FoodChinese)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FoodMediterranean)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FoodMediterranean)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FoodMexican)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FoodMexican)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FoodFrench)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FoodFrench)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FoodAmerican)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FoodAmerican)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FoodOther)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FoodOther)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.ServesVegan)
         </dt>
 
