--- a/WeddingPlanner/Views/Celebrant.cshtml
+++ b/WeddingPlanner/Views/Celebrant.cshtml
@@ -91,6 +91,78 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Judaism)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Judaism)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Sikhism)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sikhism)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Hinduism)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Hinduism)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Islamic)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Islamic)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.NonDenominational)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NonDenominational)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Catholicism)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Catholicism)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Lutheranism)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Lutheranism)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Buddhism)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Buddhism)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ReligionOther)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ReligionOther)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.ServicesCohabitants)
         </dt>
 
