--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Delete.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WeddingPlannerApp.Models.Couple
+﻿@model WeddingPlannerApp.Models.CoupleViewModel
 
 @{
     ViewBag.Title = "Delete";
@@ -8,20 +8,101 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Couple</h4>
+    <h4>CoupleViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ApplicationId)
+            @Html.DisplayNameFor(model => model.Partner1FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ApplicationId)
+            @Html.DisplayFor(model => model.Partner1FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Partner1LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Partner1LastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Partner2FirstName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Partner2FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Partner2LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Partner2LastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CoupleStreetAddress)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CoupleStreetAddress)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.City)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.City)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Zipcode)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Zipcode)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.WeddingBudget)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.WeddingBudget)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EstimatedTotal)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EstimatedTotal)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CoupleEmail)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CoupleEmail)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CouplePhone)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CouplePhone)
         </dd>
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
