--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Account/Register.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Account/Register.cshtml
@@ -1,45 +1,40 @@
 ﻿@model WeddingPlannerApp.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Register With Vows";
 }
 
-<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
+    <div class="autoElement01 form-group" align="center">
+        <p class="headerText">Register Your Account</p>
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
-
-
-    <div class="form-group">
+    <div class="autoElement01 form-group" align="center">
         @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="autoElement01 form-group" align="center">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="autoElement01 form-group" align="center">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
 
-    <div class="form-group">
+    <div class="autoElement01 form-group" align="center">
         @Html.Label("Are you a", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @*@Html.DropDownList("Name")*@
@@ -47,10 +42,10 @@
         </div>
     </div>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
+    <div class="selectorHorizontal form-group" align="center">
+        <span>
+            <input type="submit" class="possibleSelection" color="white" value="Complete Registration" />
+        </span>
     </div>
 }
 
