--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Shared/_Layout.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Shared/_Layout.cshtml
@@ -4,52 +4,44 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @*@Styles.Render("~/Content/css")*@
+    @*@Scripts.Render("~/bundles/modernizr")*@
+<link type="text/css" rel="stylesheet" href="~/Content/styles.css">
 
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    @if (User.IsInRole("Couple") == true)
-                    {
-                        <li>@Html.ActionLink("Home", "Details", "Couples")</li>
-                    }
-                    else if (User.IsInRole("Vendor") == true)
-                    {
-                        <li>@Html.ActionLink("Home", "Details", "Vendors")</li>
-                    }
-                    else
-                    {
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    }
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+<body class="disabled">
+
+    <div class="header"align="center">
+
+        @if (User.IsInRole("Couple") == true)
+        {
+            <p class="superHeaderText">@ViewBag.Name</p>
+            //<li>@Html.ActionLink("Home", "Details", "Couples")</li>
+        }
+        else if (User.IsInRole("Vendor") == true)
+        {
+            <p class="superHeaderText">@ViewBag.VendorName</p>
+            //<li>@Html.ActionLink("Home", "Details", "Vendors")</li>
+        }
+        else
+        {
+            <p class="superHeaderText">Vows</p>
+            //<li>@Html.ActionLink("Home", "Index", "Home")</li>
+        }
+        @*<li>@Html.ActionLink("About", "About", "Home")</li>
+        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+
+        @Html.Partial("_LoginPartial")
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    <div class="container body-content">
+        @RenderBody()
+        @*this is where the page renders*@
+    </div>
+
+    @*@Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")*@
+    @*@Scripts.Render("~/bundles/styles")*@
     @RenderSection("scripts", required: false)
 </body>
 </html>
