--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Create.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Create.cshtml
@@ -14,7 +14,7 @@
 
     <div class="autoElement01 form-group" align="center">
         <p class="headerText">Please Input The Names</p>
-        <p class="headerText">Those to Be Wed:</p>
+        <p class="headerText">of Those to Be Wed:</p>
         <p>First Name:</p>
         <div class="col-md-10">
             @Html.EditorFor(model => model.Partner1FirstName, new { htmlAttributes = new { @class = "form-control" } })
