--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Details.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Details.cshtml
@@ -46,6 +46,5 @@
 </div>
 <p>
     @Html.ActionLink("View Wedding Package", "Packages") |
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
 </p>
