--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Edit.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Edit.cshtml
@@ -106,7 +106,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back", "Details", new { id = Model.Id })
 </div>
 
 @section Scripts {
