--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/MakePackage.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/MakePackage.cshtml
@@ -15,6 +15,15 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
+            @Html.LabelFor(model => model.AllowsDecor, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.AllowsDecor)
+                    @Html.ValidationMessageFor(model => model.AllowsDecor, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.ThirdPartyDJ, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
