--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/EditPackage.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/EditPackage.cshtml
@@ -329,5 +329,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back", "PackageDetails", new { id = Model.Id })
 </div>
