--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/PackageDetails.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/PackageDetails.cshtml
@@ -325,8 +325,8 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "EditPackage", new { id = Model.Id }) |
+    @Html.ActionLink("Back", "Packages")
 </p>
 <p>
     @{
