made delete package view models, refactor filter method

--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/ChooseVendors.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/ChooseVendors.cshtml
@@ -6,3 +6,7 @@
 @Html.ActionLink("Photographers", "Index", "Vendors", new { type = "Photographer", id = Model.Id }, "") |
 @Html.ActionLink("Caterers", "Index", "Vendors", new { type = "Caterer", id = Model.Id }, "") |
 @Html.ActionLink("Celebrants", "Index", "Vendors", new { type = "Celebrant", id = Model.Id }, "")
+<br />
+<br />
+@Html.ActionLink("Back", "Details")
+
