--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Shared/_Layout.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Shared/_Layout.cshtml
@@ -39,8 +39,8 @@
         @*this is where the page renders*@
     </div>
 
-    @*@Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")*@
+    @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/bundles/bootstrap")*@
     @*@Scripts.Render("~/bundles/styles")*@
     @RenderSection("scripts", required: false)
 </body>
