--- a/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Details.cshtml
+++ b/WeddingPlannerApp/WeddingPlannerApp/Views/Couples/Details.cshtml
@@ -4,16 +4,16 @@
     ViewBag.Title = "Details";
 }
 
-    <div class="autoElement01" align="center">
-        <p class="headerText">Couple Info:</p>
-        <p>@Html.DisplayFor(model => model.Partner1FirstName) @Html.DisplayFor(model => model.Partner1LastName) &</p>
-        <p>@Html.DisplayFor(model => model.Partner2FirstName) @Html.DisplayFor(model => model.Partner2LastName)</p>
-        <p><br />@Html.DisplayFor(model => model.CoupleStreetAddress)</p>
-        <p>@Html.DisplayFor(model => model.City), WI</p>@*TO DO:we don't have a state property anymore?*@
-        <p><br />@Html.DisplayFor(model => model.CouplePhone)</p>
-        <p>@Html.DisplayFor(model => model.CoupleEmail)</p>
+<div class="autoElement01" align="center">
+    <p class="headerText">Couple Info:</p>
+    <p>@Html.DisplayFor(model => model.Partner1FirstName) @Html.DisplayFor(model => model.Partner1LastName) &</p>
+    <p>@Html.DisplayFor(model => model.Partner2FirstName) @Html.DisplayFor(model => model.Partner2LastName)</p>
+    <p><br />@Html.DisplayFor(model => model.CoupleStreetAddress)</p>
+    <p>@Html.DisplayFor(model => model.City), WI</p>@*TO DO:we don't have a state property anymore?*@
+    <p><br />@Html.DisplayFor(model => model.CouplePhone)</p>
+    <p>@Html.DisplayFor(model => model.CoupleEmail)</p>
 
-    </div>
+</div>
 <div class="autoElement01" align="center">
     <p class="headerText">Current Budget:</p>
     <p class="headerText">$@Html.DisplayFor(model => model.WeddingBudget)</p>
@@ -22,6 +22,9 @@
 <div class="selectorHorizontal" align="center">
     <a href="@Url.Action($"Packages")">
         <span class="possibleSelection">View Wedding Package</span>
+    </a>
+    <a href="@Url.Action($"ShowPendingContracts")">
+        <span class="possibleSelection">Pending Contracts</span>
     </a>
     <a href="@Url.Action($"Edit",new { id = Model.Id })">
         <span class="possibleSelection">Edit Couple Info</span>
@@ -32,10 +35,10 @@
 </div>
 
 @*<p>
-    @Html.ActionLink("View Wedding Package", "Packages") |
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
-</p>
-    @Html.ActionLink("Edit Couple Info", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Search Vendors", "Index")
-</p>*@
+        @Html.ActionLink("View Wedding Package", "Packages") |
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+    </p>
+        @Html.ActionLink("Edit Couple Info", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Search Vendors", "Index")
+    </p>*@
 
